# pkgcraft-python

./: .coveragerc  .gitignore  .gitmodules  .valgrind-pkgcraft.supp  .valgrind-python.supp  .valgrindrc  Cargo.toml  MANIFEST.in  README.md  README.rst  cbindgen.toml  pyproject.toml  setup.cfg  setup.py  tox.ini
.ci/: build-wheels  buildlib
.github/: build-wheels  buildlib  test
.github/workflows/: audit.yml  bench.yml  ci.yml  deploy.yml  doc.yml  lint.yml  release.yml  valgrind.yml
benches/: atom_memory_usage.py  dep_memory_usage.py  test_atom.py  test_dep.py  test_ordered_set.py  test_repo.py
doc/: Makefile  conf.py  index.rst
examples/: eapi-usage  leaf-pkgs  query  revdeps
membench/: dep.py
src/: atom.rs  config.rs  lib.rs  parse.rs  repo.rs
src/pkgcraft/: C.pxd  __init__.py  _misc.pxd  _misc.pyx  _pytest.py  atom.pxd  atom.pyx  config.pxd  config.pyx  depset.pxd  depset.pyx  eapi.pxd  eapi.pyx  error.pxd  error.pyx  logging.pyx  parse.pxd  parse.pyx  pkg.pxd  pkg.pyx  pkgcraft.pxi  pkgcraft_c.pxd  repo.pxd  repo.pyx  restrict.pxd  restrict.pyx  version.pxd  version.pyx
src/pkgcraft/atom/: __init__.pxd  __init__.py  base.pxd  base.pyx  cpv.pxd  cpv.pyx  version.pxd  version.pyx
src/pkgcraft/dep/: __init__.pxd  __init__.py  base.pxd  base.pyx  cpn.pxd  cpn.pyx  cpv.pxd  cpv.pyx  pkg.pxd  pkg.pyx  set.pxd  set.pyx  spec.pxd  spec.pyx  uri.pxd  uri.pyx  use.pyx  use_dep.pxd  use_dep.pyx  version.pxd  version.pyx
src/pkgcraft/depset/: __init__.pxd  __init__.py  base.pxd  base.pyx  deprestrict.pxd  deprestrict.pyx
src/pkgcraft/pkg/: __init__.pxd  __init__.py  base.pxd  base.pyx  ebuild.pxd  ebuild.pyx  fake.pxd  fake.pyx
src/pkgcraft/pkg/ebuild/: __init__.pxd  __init__.py  base.pxd  base.pyx  keyword.pxd  keyword.pyx  xml.pxd  xml.pyx
src/pkgcraft/repo/: __init__.pxd  __init__.py  base.pxd  base.pyx  ebuild.pxd  ebuild.pyx  fake.pxd  fake.pyx  set.pxd  set.pyx
src/pkgcraft/set/: ordered.pyx
src/pkgcraft/types/: __init__.pxd  __init__.py  ordered.pxd  ordered.pyx
tests/: __init__.py  conftest.py  misc.py  test_atom.py  test_config.py  test_depset.py  test_eapi.py  test_error.py  test_logging.py  test_parse.py  test_repo.py  test_restrict.py  test_version.py
tests/atom/: test_atom.py  test_base.py  test_cpv.py  test_version.py
tests/dep/: test_base.py  test_cpn.py  test_cpv.py  test_pkg.py  test_set.py  test_spec.py  test_use_dep.py  test_version.py
tests/pkg/: base.py  test_base.py  test_ebuild.py  test_fake.py
tests/pkg/ebuild/: test_keyword.py
tests/repo/: base.py  test_base.py  test_ebuild.py  test_fake.py  test_set.py
tests/set/: test_ordered.py
tests/types/: test_ordered.py
