[build-system]
requires = ["cython~=0.29.30", "setuptools>=62", "setuptools_scm[toml]>=7", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/pkgcraft/__version__.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*"]
build-verbosity = 1
before-all = "{package}/.github/buildlib"
test-requires = "pytest"
test-command = "{package}/.github/test {package}"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64", "pp64le"]
skip = "*-musllinux*"
# avoid testing on emulated architectures
test-skip = "*-*linux_{aarch64,ppc64le,s390x}"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-ppc64le-image = "manylinux_2_28"
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
archs = ["x86_64"]
