[metadata]
name = pkgcraft
version = attr: pkgcraft.__version__
url = https://github.com/pkgcraft/pkgcraft-python
description = python bindings for pkgcraft
author = Tim Harder
author_email = radhermit@gmail.com
long_description = file: README.md
license = MIT
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.9
package_dir=
    =src
packages=find:
tests_require = pytest
zip_safe = False

[options.packages.find]
where=src
