[metadata]
name = pkgcraft
url = https://github.com/pkgcraft/pkgcraft-python
description = python bindings for pkgcraft
author = Tim Harder
author_email = radhermit@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
python_requires = >=3.9
package_dir=
    =src
packages=find:
tests_require = pytest

[options.packages.find]
where=src

[coverage:run]
source = src/pkgcraft
plugins = Cython.Coverage
concurrency = multiprocessing,thread
parallel = True
branch = True
omit =
    src/pkgcraft/__version__.py
    src/pkgcraft/_pytest.py
    tests/*

[coverage:report]
show_missing = True
skip_covered = True
exclude_lines =
    # re-enable the standard pragma
    pragma: no cover

    # ignore defensive assertions
    raise AssertionError
    raise NotImplementedError

    # ignore unexecutable code
    if __name__ == .__main__.:
